tests/neg-custom-args/captures/class-contra.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/class-contra.scala:12:40 ---------------------------------
12 |  def fun1(k: K{val f: T^{a}}) = k.setf(a) // error
   |                                        ^
   |                                        Found:    (a : T^{x, y})
   |                                        Required: T^{k.f}
   |
   |                                        Note that capability `x` cannot flow into capture set {k.f}.
   |
   | longer explanation available when compiling with `-explain`
